# json-file-parser

./: Cargo.toml  README.md
src/: main.rs
stream/: file.json  sample.json
